# habit_tracker

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  pyproject.toml  pytest.ini
backend/config/: settings.py  urls.py
backend/habits/: pagination.py  querysets.py  utils.py  views.py
backend/habits/migrations/: 0001_initial.py  0004_alter_habit_options.py
backend/habits/tests/factories/: habits_factories.py  user_factory.py
backend/habits/tests/fixtures/: __init__.py
backend/users/: admin.py  serializers.py  views.py
backend/users/migrations/: 0002_user_chat_id.py
backend/users/utils/: decorators.py
config/: celery.py  routers.py  settings.py
habits/: admin.py  constants.py  models.py  querysets.py  serializers.py  tasks.py  views.py  viewsets_mixins.py
habits/migrations/: 0002_alter_action_description.py  0003_remove_habit_habit_nice_no_related_habit_and_more.py
habits/services/: __init__.py  telegram_bot.py
habits/tests/: test_habits_viewset.py
habits/tests/factories/: __init__.py
habits/tests/fixtures/: habits_fixtures.py
nginx/: nginx.conf
users/: models.py  views.py
users/migrations/: 0001_initial.py
